fix: application layout `default` slot visible under `header` slot (fixes SFKUI-7606) fixes #969

--- a/packages/design/src/components/layout-application-template/_layout-application-template.scss
+++ b/packages/design/src/components/layout-application-template/_layout-application-template.scss
@@ -16,6 +16,7 @@ $ZINDEX: z-index.$MODAL_ZINDEX - 1 !default;
         align-self: flex-start;
         top: 0;
         width: 100%;
+        background-color: var(--fkds-color-background-primary);
     }
 
     &__footer {
